@@ -8,6 +8,7 @@ Updated by: FPtje Falco
 [ADD] Re-added the earthquake sound
 [ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
 [ADD] Cops chief and mayor only option in the Key menu for superadmins
+[ADD] A very easy way to add classes! see shared.lua!
 [CHANGE] All door controls are now done though reload with the Keys weapon.
 [CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
 [CHANGE] The way prop protection works for admins
